--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.5.2",
+    "@material-ui/system": "^4.5.2",
+    "bootstrap": "^4.3.1",
+    "jss-lite": "^1.2.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "typeface-open-sans": "0.0.75",
+    "typeface-roboto": "0.0.75",
+    "typeface-rubik": "0.0.72"
   },
   "scripts": {
     "start": "react-scripts start",
